--- a/src/app/frontdesk/calendar/booking-modal.component.html
+++ b/src/app/frontdesk/calendar/booking-modal.component.html
@@ -88,7 +88,7 @@
             </div>
             <div class="info-item" *ngIf="booking.payment">
               <label>Payment Method:</label>
-              <span>{{ booking.payment.paymentMethod }}</span>
+              <span>{{ booking.payment.paymentMode }}</span>
             </div>
           </div>
         </div>
