--- a/src/app/frontdesk/calendar/calendar.component.html
+++ b/src/app/frontdesk/calendar/calendar.component.html
@@ -1,10 +1,45 @@
-<div class="calendar-sudlanan">
+<div class="calendar-sudlanan" tabindex="0" (keydown)="onKeyDown($event)">
   <div class="calendar-h">
     <h1>Calendar View</h1>
     <p class="text-gray-600">Manage room bookings and availability</p>
   </div>
 
   <div class="calendar-content">
+    <!-- Navigation Controls -->
+    <div class="calendar-navigation">
+      <div class="nav-controls">
+        <button 
+          class="nav-button" 
+          (click)="goToPrevious()" 
+          [disabled]="!canGoPrevious"
+          title="Go to previous 14 days (Left Arrow)">
+          <i class="fa fa-chevron-left"></i>
+          Previous
+        </button>
+        
+        <button 
+          class="nav-button today-button" 
+          (click)="goToToday()"
+          title="Go to today (Home key)">
+          <i class="fa fa-calendar-day"></i>
+          Today
+        </button>
+        
+        <button 
+          class="nav-button" 
+          (click)="goToNext()" 
+          [disabled]="!canGoNext"
+          title="Go to next 14 days (Right Arrow)">
+          Next
+          <i class="fa fa-chevron-right"></i>
+        </button>
+      </div>
+      
+      <div class="date-range-display">
+        <span class="date-range-text">{{ currentDateRangeText }}</span>
+      </div>
+    </div>
+
     <div class="button-group">
       <button
         *ngFor="let type of roomTypes"
@@ -35,7 +70,7 @@
       <thead>
         <tr>
           <th class="calendar-header">Room</th>
-          <th *ngFor="let date of dates" class="calendar-header">
+          <th *ngFor="let date of visibleDates" class="calendar-header">
             {{ date | date: 'MMM d' }}<br>
             <small>{{ date | date: 'EEE' }}</small>
           </th>
