changes picture in Our rooms home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
       <div class="swiper-wrapper">
 
          <div class="box swiper-slide">
-            <img src="assets/images/home-img-1.jpg" alt="">
+            <img src="assets/images/Pool_home.jpg" alt="">
             <div class="flex">
                <h3>luxurious rooms</h3>
                
@@ -43,7 +43,7 @@
          </div>
 
          <div class="box swiper-slide">
-            <img src="assets/images/home-img-2.jpg" alt="">
+            <img src="assets/images/Beach_view.jpg" alt="">
             <div class="flex">
                <h3>foods and drinks</h3>
                
@@ -51,7 +51,7 @@
          </div>
 
          <div class="box swiper-slide">
-            <img src="assets/images/home-img-3.jpg" alt="">
+            <img src="assets/images/Front_desk.jpg" alt="">
             <div class="flex">
                <h3>luxurious halls</h3>
                
@@ -75,7 +75,7 @@
 
    <div class="row">
       <div class="image">
-         <img src="assets/images/about-img-1.jpg" alt="">
+         <img src="assets/images/Staff.jpg" alt="">
       </div>
       <div class="content">
          <h3>best staff</h3>
@@ -86,7 +86,7 @@
 
    <div class="row revers">
       <div class="image">
-         <img src="assets/images/about-img-2.jpg" alt="">
+         <img src="assets/images/Foods.jpg" alt="">
       </div>
       <div class="content">
          <h3>best foods</h3>
@@ -97,7 +97,7 @@
 
    <div class="row">
       <div class="image">
-         <img src="assets/images/about-img-3.jpg" alt="">
+         <img src="assets/images/Pool.jpg" alt="">
       </div>
       <div class="content">
          <h3>swimming pool</h3>
